<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activites.create_account">

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/resgisterimg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView_Email_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="11dp"
            android:visibility="gone"
            app:srcCompat="@drawable/baseline_phone_android_24" />

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Hello"
            android:textColor="#03E2FF"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello"
            android:layout_marginTop="10dp"
            android:text="Let's  get started "
            android:textColor="@color/black"
            android:textSize="32dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/TextView_Email_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/get"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded"
            android:drawableTint="#0E0000"
            android:fontFamily="monospace"
            android:hint="Email Id"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/TextView_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/TextView_Email_id"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded"
            android:fontFamily="monospace"

            android:hint="Password"
            android:inputType="numberPassword"
            android:maxLength="7"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/TextView_ConfrimPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/TextView_Password"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded"
            android:fontFamily="monospace"
            android:hint=" Confirm Password"
            android:inputType="numberPassword"
            android:maxLength="7"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/Create_Account_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/TextView_ConfrimPassword"
            android:layout_marginTop="15dp"
            android:backgroundTint="#1EDBF3"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="Create Account"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/ProgrssBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@id/Create_Account_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:foregroundGravity="center"
            android:indeterminateTint="#03E3FF"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ProgrssBar"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do have an account?"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/Loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Login "
                android:textColor="#03E2FF"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>