...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/Login"
    tools:context=".Activites.Login_Page">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/black"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/SignUp_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" SignUp"
                android:textSize="16dp"
                android:textColor="#03E2FF"
                android:textStyle="bold"/>
...
